Crash in [@ @0x0 | dri2_dup_native_fence_fd] on Mesa 24.1.3.0
Categories
(Core :: Graphics, defect)
Tracking
()
People
(Reporter: gsvelto, Assigned: aosmond)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/61783742-dbec-485c-8a60-6eb740240819
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames:
0 ? @0x0000000000000000
1 libEGL_mesa.so.0 dri2_dup_native_fence_fd src/egl/drivers/dri2/egl_dri2.c:3449
2 libEGL_mesa.so.0 eglDupNativeFenceFDANDROID src/egl/main/eglapi.c:2236
3 libxul.so mozilla::gl::GLLibraryEGL::fDupNativeFenceFDANDROID(void*, void*) const gfx/gl/GLLibraryEGL.h:444
3 libxul.so mozilla::gl::EglDisplay::fDupNativeFenceFDANDROID(void*) const gfx/gl/GLLibraryEGL.h:879
3 libxul.so DMABufSurface::FenceSet() widget/gtk/DMABufSurface.cpp:309
4 libxul.so mozilla::gl::SharedSurface::ProducerRelease() gfx/gl/SharedSurface.h:128
4 libxul.so mozilla::gl::SwapChainPresenter::SwapBackBuffer(std::shared_ptr<mozilla::gl::... gfx/gl/GLScreenBuffer.cpp:104
5 libxul.so mozilla::gl::SwapChainPresenter::~SwapChainPresenter() gfx/gl/GLScreenBuffer.cpp:93
6 libxul.so mozilla::DefaultDelete<mozilla::gl::SwapChainPresenter>::operator()(mozilla::... mfbt/UniquePtr.h:460
This seems to be hitting all versions of Firefox on rolling distros. IIRC Mesa 24.1.3 is not the latest version available I assume this must have been fixed upstream. I'm filing it just because the volume is large but I don't think we need to act on this, unless something changes.
Comment 1•1 year ago
|
||
Martin, do you think this is something we need to fix on our end? DMABuf looked like its involved in the stack here.
Comment 2•1 year ago
|
||
Looking at dri2_dup_native_fence_fd() sources it doesn't look actionable on our side (unless we disable WebGL/dmabuf where GL fence is used).
Comment 3•1 year ago
|
||
IIRC Mesa 24.1.3 is not the latest version available I assume this must have been fixed upstream.
I got two reports with glibc 2.39 & glibc 2.40 both runs are using Mesa version 24.1.3-1699.392.pm.1 from packman:
Information for package Mesa:
-----------------------------
Repository : Packman
Name : Mesa
Version : 24.1.3-1699.392.pm.1
Arch : x86_64
Vendor : http://packman.links2linux.de
Installed Size : 9.4 KiB
Installed : Yes
Status : up-to-date
Source package : Mesa-24.1.3-1699.392.pm.1.src
Upstream URL : https://www.mesa3d.org
Summary : System for rendering 3-D graphics
Description :
Mesa is a 3-D graphics library with an API which is very similar to
that of OpenGL.* To the extent that Mesa utilizes the OpenGL command
syntax or state machine, it is being used with authorization from
Silicon Graphics, Inc.(SGI). However, the author does not possess an
OpenGL license from SGI, and makes no claim that Mesa is in any way a
compatible replacement for OpenGL or associated with SGI. Those who
want a licensed implementation of OpenGL should contact a licensed
vendor.
Please do not refer to the library as MesaGL (for legal reasons). It's
just Mesa or The Mesa 3-D graphics library.
* OpenGL is a trademark of Silicon Graphics Incorporated.
Hitting the same error, it's quite annoying, navigating through geizhals [punkt] de also randomly crashes firefox.
Comment 4•1 year ago
|
||
Addenda: disabled WebGL with webgl.disabled = false in about:config and seems be a viable workaround
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
I would advise blocking DMABUF for mesa/radeonsi + 24.1.3 rather than WebGL. Presumably WebGL will still work, albeit less efficiently, if we avoid DMABUF.
| Assignee | ||
Comment 6•1 year ago
|
||
We should land a hard coded fix in nightly, but can also distribute a dynamic blocklist entry given the volume of crashes (high for Linux).
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 7•1 year ago
|
||
Updated•1 year ago
|
Comment 9•1 year ago
|
||
| bugherder | ||
Comment 10•1 year ago
|
||
The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox131towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 11•1 year ago
|
||
We are not uplifting, we'll use the downloadable blocklist to disable DMABUF for this particular driver version for earlier versions.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 12•1 year ago
|
||
The downloadable blocklist update landed earlier this week and we should start seeing the crashes drop off across all channels.
Description
•