Bug 1913778 - Block DMABUF for mesa/radeonsi version 24.1.3.0 due to crash volume. r=gfx-reviewers,nical,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D223142