widget/GfxDriverInfo.cpp
@@ -834,6 +834,7 @@ const nsAString& GfxDriverInfo::GetDriverVendor(DriverVendor id) {
     DECLARE_DRIVER_VENDOR_ID(MesaSWUnknown, "mesa/software-unknown");
     DECLARE_DRIVER_VENDOR_ID(MesaUnknown, "mesa/unknown");
     DECLARE_DRIVER_VENDOR_ID(MesaR600, "mesa/r600");
+    DECLARE_DRIVER_VENDOR_ID(MesaRadeonsi, "mesa/radeonsi");
     DECLARE_DRIVER_VENDOR_ID(MesaNouveau, "mesa/nouveau");
     DECLARE_DRIVER_VENDOR_ID(NonMesaAll, "non-mesa/all");
     DECLARE_DRIVER_VENDOR_ID(HardwareMesaAll, "mesa/hw-all");
